# OOGL

./: CMakeLists.txt  LICENSE  README.md
demo/: CMakeLists.txt
demo/src/: main.cxx
example1_createdevice/: CMakeLists.txt
example1_createdevice/src/: main.cpp
example2_drawtriangle/: CMakeLists.txt
example2_drawtriangle/src/: main.cpp
example3_blending/: CMakeLists.txt
example3_blending/src/: main.cpp
example4_texturing/: CMakeLists.txt
example4_texturing/src/: main.cpp
example5_threadedvertices/: CMakeLists.txt
example5_threadedvertices/src/: main.cpp
example6_customvertextype/: CMakeLists.txt
example6_customvertextype/src/: main.cpp
example7_framebuffers/: CMakeLists.txt
example7_framebuffers/src/: main.cpp
examples/: CMakeLists.txt
examples/example_blending/: CMakeLists.txt  simple.fs  simple.vs
examples/example_blending/src/: main.cpp
examples/example_createdevice/: CMakeLists.txt
examples/example_createdevice/src/: main.cpp
examples/example_customvertextype/: CMakeLists.txt  simple.fs  simple.vs
examples/example_customvertextype/src/: main.cpp
examples/example_deferredframebuffers/: CMakeLists.txt
examples/example_deferredframebuffers/src/: main.cpp
examples/example_drawcube/: CMakeLists.txt  simple.vs
examples/example_drawcube/src/: main.cpp
examples/example_drawtriangle/: CMakeLists.txt
examples/example_drawtriangle/src/: main.cpp
examples/example_framebuffers/: CMakeLists.txt  render_to_texture.fs  result.fs  result.vs
examples/example_framebuffers/src/: main.cpp
examples/example_lineardepthmap/: CMakeLists.txt  lineardepth.fs  result.fs
examples/example_lineardepthmap/src/: main.cpp
examples/example_loadtexturesfromthread/: CMakeLists.txt  simple.vs  texture0.tga  texture1.tga  texture2.tga  texture3.tga
examples/example_loadtexturesfromthread/src/: main.cpp
examples/example_maprangevertexbuffer/: CMakeLists.txt
examples/example_maprangevertexbuffer/src/: main.cpp
examples/example_mapvertexbuffer/: CMakeLists.txt  simple.fs
examples/example_mapvertexbuffer/src/: main.cpp
examples/example_texturing/: CMakeLists.txt  simple.fs
examples/example_texturing/src/: main.cpp
examples/example_threaddrawcube/: CMakeLists.txt  simple.fs  simple.vs
examples/example_threaddrawcube/src/: main.cpp
examples/example_threadlineardepthmap/: CMakeLists.txt  lineardepth.vs
examples/example_threadlineardepthmap/src/: main.cpp
examples/example_threadvertexbuffermapping/: CMakeLists.txt
examples/example_threadvertexbuffermapping/src/: main.cpp
examples/examples_window/: CMakeLists.txt
examples/examples_window/include/: POGLExampleWindow.h
examples/examples_window/src/win32/: Win32POGLExampleWindow.cpp
examples_window/: CMakeLists.txt
examples_window/include/: POGLExampleWindow.h
examples_window/src/win32/: Win32POGLExampleWindow.cpp
pogl/: CMakeLists.txt
pogl/include/gl/: pogl.h  pogl.hxx  poglext.h
pogl/src/: IPOGLBufferResource.h  IPOGLBufferResourceProvider.h  MemCheck.h  POGLBufferResource.cpp  POGLBufferResource.h  POGLBufferResourceStream.cpp  POGLBufferResourceStream.h  POGLDeferredCommands.cpp  POGLDeferredCommands.h  POGLDeferredDeviceContext.cpp  POGLDeferredDeviceContext.h  POGLDeferredProgramState.cpp  POGLDeferredProgramState.h  POGLDeferredRenderContext.cpp  POGLDeferredRenderContext.h  POGLDeferredRenderState.cpp  POGLDeferredRenderState.h  POGLDeferredStateValue.h  POGLDevice.cpp  POGLDevice.cxx  POGLDevice.h  POGLDevice.hxx  POGLDeviceContext.cpp  POGLDeviceContext.cxx  POGLDeviceContext.h  POGLDeviceContext.hxx  POGLEffect.cpp  POGLEffect.cxx  POGLEffect.h  POGLEffect.hxx  POGLEffectData.h  POGLEffectData.hxx  POGLEffectState.cpp  POGLEffectState.cxx  POGLEffectState.h  POGLEffectState.hxx  POGLEnum.cpp  POGLEnum.cxx  POGLEnum.h  POGLEnum.hxx  (+57 more)
pogl/src/providers/: POGLAMDBufferResource.cpp  POGLAMDBufferResource.h  POGLAMDBufferResourceProvider.cpp  POGLAMDBufferResourceProvider.h  POGLBufferResourceLock.cpp  POGLBufferResourceLock.h  POGLDefaultBufferResource.cpp  POGLDefaultBufferResource.h  POGLDefaultBufferResourceProvider.cpp  POGLDefaultBufferResourceProvider.h  POGLDefaultStaticBufferResource.cpp  POGLDefaultStaticBufferResource.h
pogl/src/uniforms/: POGLDefaultUniform.cpp  POGLDefaultUniform.cxx  POGLDefaultUniform.h  POGLDefaultUniform.hxx  POGLDeferredUniform.cpp  POGLDeferredUniform.h  POGLGlobalUniform.cpp  POGLGlobalUniform.h  POGLStaticUniform.cpp  POGLStaticUniform.h  POGLUniformDouble.cpp  POGLUniformDouble.cxx  POGLUniformDouble.h  POGLUniformDouble.hxx  POGLUniformFloat.cpp  POGLUniformFloat.cxx  POGLUniformFloat.h  POGLUniformFloat.hxx  POGLUniformInt32.cpp  POGLUniformInt32.cxx  POGLUniformInt32.h  POGLUniformInt32.hxx  POGLUniformMat4.cpp  POGLUniformMat4.cxx  POGLUniformMat4.h  POGLUniformMat4.hxx  POGLUniformNotFound.cpp  POGLUniformNotFound.cxx  POGLUniformNotFound.h  POGLUniformNotFound.hxx  POGLUniformProperty.h  POGLUniformProperty.hxx  POGLUniformSampler2D.cpp  POGLUniformSampler2D.cxx  POGLUniformSampler2D.h  POGLUniformSampler2D.hxx  POGLUniformUInt32.cpp  POGLUniformUInt32.cxx  POGLUniformUInt32.h  POGLUniformUInt32.hxx
pogl/src/win32/: Win32POGLDevice.cpp  Win32POGLDevice.cxx  Win32POGLDevice.h  Win32POGLDevice.hxx  Win32POGLDeviceContext.cpp  Win32POGLDeviceContext.cxx  Win32POGLDeviceContext.h  Win32POGLDeviceContext.hxx  Win32POGLRenderContext.cpp  Win32POGLRenderContext.h
poglext/: CMakeLists.txt
poglext/include/gl/: poglext.h
poglext/src/: POGLXCreateCone.cpp  POGLXCreateSphere.cpp  POGLXLoadBMPImage.cpp  POGLXLoadTGAImage.cpp  config.h
poglmath/: CMakeLists.txt
poglmath/include/gl/: poglmath.h
poglmath/src/: POGLMat4Math.cpp  POGLVec3Math.cpp  config.h
