add_subdirectory (examples_window)
add_subdirectory (example_createdevice)
add_subdirectory (example_drawtriangle)
add_subdirectory (example_blending)
add_subdirectory (example_texturing)
add_subdirectory (example_customvertextype)
add_subdirectory (example_mapvertexbuffer)
add_subdirectory (example_maprangevertexbuffer)
add_subdirectory (example_framebuffers)
add_subdirectory (example_threadvertexbuffermapping)
